# wholerobot_act

./: .gitignore  .gitmodules  README.md
src/action_recognition_experiment/: CMakeLists.txt  package.xml  state_machine.py  state_machine2.py  state_machine_recordings.py
src/action_recognition_experiment/launch/: ar.launch  df.launch  exprobot.launch  exprobot2.launch  fr_scitos_vpn_.launch  preexp.launch  rec_srv.launch  rec_srv_all.launch  republisher_from_robot.launch  republisher_to_robot.launch
src/action_recognition_experiment/old/: recorder_wrap.py  recwact.launch
src/action_recognition_experiment/src/: video_recorder_srv.cpp
src/action_recognition_experiment/srv/: Actname.srv
src/datasetloader_ros/: CMakeLists.txt  README.md  description.txt  package.xml  startme.sh
src/datasetloader_ros/data/myset_7030splits/: brush_hair_test_split1.txt  brush_hair_test_split2.txt  brush_hair_test_split3.txt  chew_test_split1.txt  chew_test_split2.txt  chew_test_split3.txt  clap_test_split1.txt  clap_test_split2.txt  clap_test_split3.txt  drink_test_split1.txt  drink_test_split2.txt  drink_test_split3.txt  eat_test_split1.txt  eat_test_split2.txt  eat_test_split3.txt  jump_test_split1.txt  jump_test_split2.txt  jump_test_split3.txt  misc_test_split1.txt  misc_test_split2.txt  misc_test_split3.txt  pick_test_split1.txt  pick_test_split2.txt  pick_test_split3.txt  pour_test_split1.txt  pour_test_split2.txt  pour_test_split3.txt  sit_test_split1.txt  sit_test_split2.txt  sit_test_split3.txt  smile_test_split1.txt  smile_test_split2.txt  smile_test_split3.txt  stand_test_split1.txt  stand_test_split2.txt  stand_test_split3.txt  talk_test_split1.txt  talk_test_split2.txt  talk_test_split3.txt  walk_test_split1.txt  (+5 more)
src/datasetloader_ros/launch/: cfer_ns.launch  cfer_ns.launch.backup  cfsm.launch  common_rgb+flow.launch  rc_loopback test.launch  rc_loopback_test2.launch  rclass.launch  rn_srv.launch  rn_srv_test.launch  rn_srv_test_test.launch  rn_srv_testing.launch  rn_srv_train.launch  robot_vfc.launch  sm.launch  sm.launch.backup  tester_ns.launch  testsm.launch  testsm_own.launch  trainer_ns.launch  trainsm.launch  ttc_ns.launch.xml  vfc.launch  vss.launch  vss_dual.launch
src/datasetloader_ros/scripts/: build_split.py  firstlogin.sh  organize.py
src/datasetloader_ros/src/: cfer.py  gatherer.py  readpathv_service.cpp  service_splitter.py  smtt.py  smtt.py.backup  state_machine_cf.py  state_machine_test.py  state_machine_train.py  tester.py  tot.py  trainer.py  vsmf_srv.cpp
src/datasetloader_ros/srv/: actvid.srv  split.srv
src/docker_coms/: addroute.sh
src/face_recognition_ros/: CMakeLists.txt  README.md  chatter.py  env.sh  example.py  example_temp.py  find_faces.py  find_facesF.py  find_faces_in_picture_cnn.py  find_one_face.py  find_one_face2.py  package.xml  rosq_2.py
src/face_recognition_ros/launch/: fof.launch  fof_scitos.launch  loopbacktest.launch
src/face_recognition_ros/msg/: Heads.msg  HeadsArrayFloat.msg  HeadsFloat.msg
src/flir_ptu/flir_ptu_driver/scripts/: cmd_angles
src/flir_ptu/flir_ptu_viz/rviz/: urdf.rviz
src/movehead/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
src/movehead/launch/: control_ptu_fr+flow2.launch  fr.launch  fr_scitos.launch  fr_scitos2.launch  fr_webcam.launch  newheads_showflowheads2.launch  sh.launch
src/movehead/msg/: HeadsArray.msg
src/movehead/old/: ar_scitos.launch.old  ar_scitos.launch_old  control_ptu_fr+flow.launch.old  df_scitos.launch.old  df_scitos2.launch.old  df_scitos_vpn.launch.old  fr_scitos2.launch.old  fr_scitos3.launch.old  getheadsvel.py  getheadsvel_v2.py  getheadsvel_v3.py  head_tracking_float.py  head_tracking_float2.py  head_tracking_float3.py  head_tracking_mh.py  head_tracking_mh_norate.py  newheads.launch.old  newheads2.launch.old  newheads_showflowheads.launch.old  showheads.py
src/movehead/scripts/: republish_from_robot.sh
src/movehead/src/: getheadsvel_v4.py  head_tracking.py  head_tracking_float4.py  head_tracking_mh.py  head_tracking_old.py  showheads2.py  test.cpp
src/mygraphs/: CMakeLists.txt  a.launch  bar.py  bar2.py  bar2_.py  package.xml  showskeleton.py
src/video_stream_opencv/launch/: webcam.launch
